--- a/BattleshipsProto/BattleshipsProto/BattleshipsProto.csproj
+++ b/BattleshipsProto/BattleshipsProto/BattleshipsProto.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.15" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Resources.ResourceManager" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
