--- a/BattleshipsProto/BattleshipsProto/log4net.config
+++ b/BattleshipsProto/BattleshipsProto/log4net.config
@@ -6,7 +6,7 @@
 	</root>
 
 	<appender name="all_logs_file" type="log4net.Appender.FileAppender">
-		<file value="all.log"/>
+		<file value="All.log"/>
 		<appendToFile value="true" />
 		<layout type="log4net.Layout.PatternLayout">
 			<conversionPattern value="%date %level %logger - %message%newline"/>
