Añadiendo el factory para los idiomas

--- a/BattleshipsProto/BattleshipsProto/BattleshipsProto.csproj
+++ b/BattleshipsProto/BattleshipsProto/BattleshipsProto.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="All.log">
+    <None Update="config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="log4net.config">
